# consolized-game-boy

src/gb_vga/: CMakeLists.txt
src/nes-controller/: CMakeLists.txt
src/nes-controller-gb/: CMakeLists.txt  nes-controller-gb.c
